--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@radix-ui/react-tooltip": "^1.1.8",
         "@supabase/supabase-js": "^2.86.0",
         "@types/react": "^19.2.7",
+        "axios": "^1.13.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "*",
         "cmdk": "^1.1.1",
