--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "input-otp": "^1.4.2",
         "jspdf": "^3.0.4",
         "lucide-react": "^0.487.0",
+        "moment": "^2.30.1",
         "next-themes": "^0.4.6",
         "react": "^18.3.1",
         "react-day-picker": "^8.10.1",
