--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
         "sonner": "^2.0.3",
         "tailwind-merge": "*",
         "uuid": "^13.0.0",
-        "vaul": "^1.1.2"
+        "vaul": "^1.1.2",
+        "xmlbuilder2": "^4.0.3"
     },
     "devDependencies": {
         "@types/node": "^20.10.0",
